[package]
name = "onlyrust"
version = "1.74.0"
edition = "2021"


[dependencies]

actix = "0.11.0" #idk wat this does

actix-web = "4" #for webdev

actix-rt = "2.2"

tokio = { version = "1", features = ["full"] } #for async tasks

rusqlite = "0.25.0" # for database

chrono = "0.4.19" #date time

rusoto_core = "0.45.0" #cloud storage

rusoto_s3 = "0.45.0" #more cloud storage

serde = { version = "1", features = ["derive"] } #serialization

rust-argon2 = "2.0" #hashing