[package]
name = "onlyrust"
version = "1.0.0"
edition = "2021"

[dependencies]

rusqlite = "0.25.0" # for database

chrono = "0.4.19" #date time

sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-native-tls"] }

rusoto_core = "0.45.0" #cloud storage

rusoto_s3 = "0.45.0" #more cloud storage

serde = { version = "1", features = ["derive"] } #serialization

dotenv = "0.15.0"

rust-argon2 = "2.0" #hashing