[package]
name = "onlyrust"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0"

actix-files = "0.6.2"

actix-multipart = "0.4.0"

rusqlite = "0.25.0" # for database

chrono = "0.4.19" #date time

serde = { version = "1", features = ["derive"] }

sqlx = { version = "0.5", features = ["sqlite", "runtime-actix-native-tls"] }

rusoto_core = "0.45.0" #cloud storage

rusoto_s3 = "0.45.0" #more cloud storage

serde = { version = "1", features = ["derive"] } #serialization

dotenv = "0.15.0"

rust-argon2 = "2.0" #hashing

rusoto_core = "0.47.0"

rusoto_credential = "0.47.0"

rusoto_s3 = "0.47.0"
